# spatio

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  IMPROVEMENTS_APPLIED.md  README.md  RELEASE_GUIDE.md  VERSION_MANAGEMENT.md  WORKSPACE.md  justfile  verify_dict_support.py
.github/: README.md
.github/CI/: .md
.github/workflows/: auto-release.yml  ci.yml  go.yml  python.yml  release.yml
assets/: README.md
benches/: batch_vs_single.rs  simple_bench_test.rs  spatial_benchmarks.rs
bindings/go/: README.md  bindings.go  dlopen_unix.go  go.mod  go.sum  spatio.go  spatio_test.go  types.go
bindings/go/examples/basic/: main.go
bindings/go/libs/: .gitignore  README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: performance_demo.py  trajectory_tracking.py
bindings/python/src/spatio/: __init__.py  types.py
bindings/python/tests/: test_full_api.py  test_spatio.py  test_types.py
crates/benchmarks/: Cargo.toml
crates/benchmarks/results/: README.md  core-v0.3.6.json  core-v0.3.6.md  core-v0.3.7.json  core-v0.3.7.md  core-v0.3.8.json  core-v0.3.8.md  core-v0.3.9.json  core-v0.3.9.md
crates/cabi/: Cargo.toml
crates/cabi/src/: dto.rs  ffi.rs  lib.rs  tests.rs  wire.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: lib.rs
crates/client/src/transport/: http.rs  mod.rs  rpc.rs
crates/core/: Cargo.toml  builder.rs  client.rs  config.rs  error.rs  lib.rs
crates/core/benches/: spatial_benchmarks.rs
crates/core/compute/: geojson.rs  mod.rs  validation.rs
crates/core/compute/spatial/: algorithms.rs  mod.rs  rtree.rs
crates/core/compute/spatial/queries/: d2.rs  d3.rs
crates/core/compute/temporal/: mod.rs  queries.rs
crates/core/db/: batch.rs  cold_state.rs  hot_state.rs  internal.rs  mod.rs  namespace.rs  sync.rs
crates/core/examples/: 3d_spatial_tracking.rs  README.md  advanced_spatial.rs  bbox_database.rs  comprehensive_demo.rs  getting_started.rs  performance_improvements.rs  persistence_lifecycle.rs  spatial_bench.rs  spatial_queries.rs  trajectory_tracking.rs
crates/core/storage/: memory.rs  mod.rs  persistence.rs  snapshot.rs
crates/core/storage/backends/: aof.rs  mod.rs
crates/core/storage/persistence/: aof.rs  mod.rs
crates/core/tests/: aof_rewrite_test.rs  hot_state_recovery_test.rs  snapshot_test.rs  spatial_3d_performance.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/py/: Cargo.toml  README.md  justfile  pyproject.toml
crates/py/examples/: basic_usage.py
crates/py/src/: lib.rs
crates/py/src/spatio/: __init__.py  types.py
crates/py/tests/: test_full_api.py  test_knn.py  test_spatio.py  test_types.py
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/server/: Cargo.toml  Dockerfile  README.md
crates/server/src/: handler.rs  lib.rs  main.rs  protocol.rs  reader.rs  writer.rs
crates/server/src/transport/: http.rs  mod.rs  rpc.rs
crates/server/tests/: basic_test.rs  hardening_test.rs  remote_client_test.rs  spatial_ops_test.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: bbox.rs  config.rs  geo.rs  lib.rs  point.rs  stats.rs  time.rs  trajectory.rs
docs/: 3D_QUICK_REFERENCE.md  3D_SPATIAL_INDEXING.md  ARCHITECTURE.md  CHANGELOG.md  COMPLEXITY.md  RELEASE_GUIDE.md  VERSION_MANAGEMENT.md  WORKSPACE.md
examples/: 3d_spatial_tracking.rs  README.md  advanced_spatial.rs  architecture_demo.rs  batch_performance.rs  bbox_database.rs  bounding_boxes.rs  comprehensive_demo.rs  getting_started.rs  hybrid_spatial_index.rs  persistence_lifecycle.rs  spatial_queries.rs  sync_wrapper.rs  trajectory_tracking.rs
py-spatio/: Cargo.toml  MANIFEST.in  Makefile  README.md  justfile  pyproject.toml  pyrightconfig.json
py-spatio/examples/: basic_usage.py  performance_demo.py  trajectory_tracking.py
py-spatio/src/: lib.rs
py-spatio/src/spatio/: types.py
py-spatio/tests/: test_spatio.py  test_spatio_3d.py
results/: core.json  core_bench.json  mac_core.json  mac_server.json  rpi5_core.json  rpi5_manual_20260117_171512.json  rpi5_server.json  server_results.json
scripts/: README.md  bench-release.sh  bench_compare.py  build_rpi_bench.sh  bump-version.sh  check-version.sh  run_benchmarks.sh  run_rpi_native.sh  run_rpi_server_bench.sh
spatio-types/: Cargo.toml
spatio-types/src/: lib.rs  point.rs  polygon.rs
src/: batch.rs  builder.rs  config.rs  db.rs  error.rs  ffi.rs  index.rs  lib.rs  namespace.rs  persistence.rs  spatial.rs  spatial_index.rs  storage.rs  types.rs
src/compute/: mod.rs  validation.rs
src/compute/spatial/: algorithms.rs  index.rs  mod.rs  queries_2d.rs  queries_3d.rs  rtree.rs
src/compute/spatial/hybrid/: geohash_rtree.rs  mod.rs  query.rs  spatial_object.rs  tests.rs
src/compute/spatial/queries/: d2.rs  d3.rs
src/compute/spatial/rtree/: mod.rs
src/compute/temporal/: mod.rs  queries.rs  queries.rs.bak
src/db/: batch.rs  internal.rs  mod.rs  namespace.rs  spatial_2d.rs  spatial_3d.rs  sync.rs  temporal.rs
src/storage/: aof.rs  memory.rs  mod.rs  persistence.rs
src/storage/backends/: memory.rs
tests/: Cargo.toml  aof_rewrite_test.rs  edge_cases.rs  integration_tests.rs  snapshot_test.rs  spatial_3d_performance.rs
tests/tests/: buffer_test.rs  client_integration.rs  server_hardening_test.rs  server_remote_client_test.rs  server_spatial_ops_test.rs
