[workspace]
resolver = "2"
members = [
    "crates/core",
    "bindings/python",
    "crates/cabi",
    "crates/types",
    "crates/server",
    "crates/client",
    "crates/benchmarks",
    "tests",
]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
license = "MIT"
repository = "https://github.com/pkvartsianyi/spatio"
authors = ["Petro Kvartsianyi"]

[workspace.dependencies]
# Spatial and geometric types
geo = "0.31.0"
rstar = "0.12.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24.1"

# Utilities
bytes = "1.11"
dashmap = "5.5"
log = "0.4"
parking_lot = "0.12.5"
rustc-hash = "2.1.1"
thiserror = "2.0.17"
toml = "0.9.8"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# Networking / RPC
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
tokio-serde = { version = "0.9.0", features = ["json"] }
tarpc = { version = "0.34", features = [
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }

# Python bindings
pyo3 = { version = "0.27.1", features = ["extension-module"] }

# Workspace crates
spatio = { version = "0.3.9", path = "crates/core" }
spatio-types = { version = "0.2.3", path = "crates/types" }
spatio-server = { version = "0.2.8", path = "crates/server" }
spatio-client = { version = "0.2.7", path = "crates/client" }

# Dev dependencies
criterion = "0.7.0"
env_logger = "0.11"
tempfile = "3.8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
debug = true
opt-level = 0
