[package]
name = "spatio-types"
version = "0.1.6"
edition = "2024"
rust-version = "1.90.0"
description = "Core spatial and temporal data types for the Spatio database"
license = "MIT"
repository = "https://github.com/pkvartsianyi/spatio"
keywords = ["spatial", "temporal", "geospatial", "types"]
categories = ["data-structures", "science::geo"]

[dependencies]
geo = { version = "0.31.0", features = ["use-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
