[package]
name = "spatio-integration-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# No runtime dependencies

[dev-dependencies]
spatio = { workspace = true }
spatio-client = { workspace = true }
spatio-server = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
spatio-types = { workspace = true }
