[package]
name = "spatio-benchmarks"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
spatio = { workspace = true }
spatio-types = { workspace = true }
spatio-client = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures.workspace = true
