[package]
name = "spatio-cabi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI for Spatio - used to build non-Rust language bindings (e.g. the Go bindings via purego)"

[lib]
name = "spatio_cabi"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
spatio = { workspace = true, features = ["sync"] }
spatio-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
