[package]
name = "spatio-client"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust RPC client for Spatio database"

[lib]
name = "spatio_client"
path = "src/lib.rs"

[dependencies]
spatio-server = { workspace = true }
spatio-types = { workspace = true }
tokio = { version = "1.37", features = ["net", "time", "sync", "rt"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { version = "0.34", features = [
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio-serde = { version = "0.9.0", features = ["json"] }

# Optional HTTP transport
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
http = ["reqwest"]
