[package]
name = "spatio-client"
version = "0.2.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust RPC client for Spatio database"

[lib]
name = "spatio_client"
path = "src/lib.rs"

[dependencies]
spatio-server = { workspace = true }
spatio-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio-serde = { workspace = true }

# Optional HTTP transport
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
http = ["reqwest"]
