[package]
name = "spatio"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance, embedded spatio-temporal database for modern applications"
homepage = "https://github.com/pkvartsianyi/spatio"
documentation = "https://docs.rs/spatio"
keywords = ["spatial", "database", "geospatial", "embedded", "temporal"]
categories = ["database-implementations", "science::geo"]
readme = "../../README.md"

[lib]
name = "spatio"
path = "lib.rs"

[dependencies]
# Workspace dependencies
geo.workspace = true
rstar.workspace = true
s2.workspace = true
serde.workspace = true
serde_json.workspace = true
geojson.workspace = true
bytes = { workspace = true, features = ["serde"] }
dashmap.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio = { version = "1.37", features = [
    "net",
    "time",
    "sync",
    "rt",
], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
spatio-rpc = { workspace = true, optional = true }
anyhow = { version = "1.0", optional = true }

# Optional dependencies
bincode = { workspace = true, optional = true }
geozero = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

# Local workspace crates
spatio-types = { workspace = true, features = ["geojson"] }

[features]
default = ["snapshot", "geojson", "time-index"]
geojson = ["dep:geozero"]
aof = ["dep:bincode"]
snapshot = ["dep:bincode"]
toml = ["dep:toml"]
time-index = []
bench-prof = []
sync = []
remote = [
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-stream",
    "dep:futures",
    "dep:spatio-rpc",
    "dep:anyhow",
]
full = ["geojson", "aof", "snapshot", "toml", "time-index", "sync", "remote"]

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
tempfile.workspace = true

[[example]]
name = "getting_started"
doc-scrape-examples = true

[[example]]
name = "spatial_queries"

[[example]]
name = "trajectory_tracking"

[[example]]
name = "persistence_lifecycle"
required-features = ["aof"]

[[example]]
name = "3d_spatial_tracking"

[[test]]
name = "aof_rewrite_test"
required-features = ["aof"]
