[package]
name = "spatio-py"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Spatio - A high-performance, embedded spatio-temporal database"
keywords = ["spatial", "database", "geospatial", "python", "bindings"]
categories = ["database-implementations", "science::geo", "api-bindings"]

[lib]
name = "_spatio"
crate-type = ["cdylib"]

[dependencies]
# Core Spatio dependency
spatio = { path = "../core", features = ["sync"] }
serde_json = "1.0"
pythonize = "0.27"

# Python bindings
pyo3 = { workspace = true }

# Geo types and algorithms
geo.workspace = true

[features]
default = []
