[package]
name = "spatio-rpc"
version = "0.1.0"
edition = "2021"
description = "Spatio RPC framing and codecs"
license = "MIT"

[dependencies]
spatio-types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.6"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
thiserror = "1.0"
