[package]
name = "spatio-rpc"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatio RPC framing and codecs"

[dependencies]
spatio-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.6"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
thiserror = "1.0"
