[package]
name = "spatio-server"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance RPC server for Spatio database"

[lib]
name = "spatio_server"
path = "src/lib.rs"

[[bin]]
name = "spatio-server"
path = "src/main.rs"

[dependencies]
spatio = { workspace = true }
spatio-types = { workspace = true }
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio-stream = "0.1"
tarpc = { version = "0.34", features = [
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio-serde = { version = "0.9.0", features = ["json"] }

# Optional HTTP transport
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }

[features]
default = []
http = ["axum", "tower"]

[dev-dependencies]
tokio-test = "0.4"
spatio-client = { path = "../client", workspace = true }
