[package]
name = "spatio-server"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance RPC server for Spatio database"

[lib]
name = "spatio_server"
path = "src/lib.rs"

[[bin]]
name = "spatio-server"
path = "src/main.rs"

[dependencies]
spatio = { workspace = true }
spatio-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
tarpc = { version = "0.34", features = [
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio-serde = { version = "0.9.0", features = ["json"] }

# Optional HTTP transport
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }

[features]
default = []
http = ["axum", "tower"]

[dev-dependencies]
tokio-test = "0.4"
