[package]
name = "spatio-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core spatial and temporal data types for the Spatio database"
keywords = ["spatial", "temporal", "geospatial", "types"]
categories = ["data-structures", "science::geo"]

[dependencies]
geo = { workspace = true, features = ["use-serde"] }
serde.workspace = true
